# ParaClickHouse

./: CMakeLists.txt  README.md
cmake/: tools.cmake
cmake/linux/: toolchain-x86_64.cmake
programs/: main.cpp
src/: CMakeLists.txt
src/AggregateFunctions/: AggregateFunctionFactory.cpp  AggregateFunctionSum.h  CMakeLists.txt  IAggregateFunction.h
src/Core/: Defines.h
src/Interpreters/: Aggregator.cpp
src/parallelization/: AggregateFunctionSum_CUDA.cu  AggregateFunctionSum_CUDA.cuh  CMakeLists.txt  Common_CUDA.h  DeviceManagement.cu  DeviceManagement.cuh  ResourceManagement.cpp  ResourceManagement.h
